--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,52 @@
-<p>
-  home works!
-</p>
+<div id="body">
+<div class="logo">
+  <h1><i>Drippy Apparel</i></h1>
+</div>
+<div class="container-fluid">
+  <div class="grid">
+<mat-grid-list cols="3" gutterSize="2.3rem" rowHeight="8rem">
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/beauty1.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/beautyc.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/elegant.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/clothes.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/business.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/business1.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4" >
+      <img style="width: 100%; height: 100%;" src="/assets/shoes.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/business2.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4" >
+      <img style="width: 100%; height: 100%;" src="/assets/boy.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/man.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/male.jpg" alt="">
+  </mat-grid-tile>
+  <mat-grid-tile colspan= "1" rowspan = "4">
+      <img style="width: 100%; height: 100%;" src="/assets/guy.jpg" alt="">
+  </mat-grid-tile>
+</mat-grid-list>
+</div>
+</div>
+</div>
+
+<!-- *ngFor="let tile of tiles"
+      [colspan]="tile.cols"
+      [rowspan]="tile.rows"
+      [style.background]="tile.color" -->
